--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "require": {
         "php": "^7.1|8.*",
         "illuminate/support": "*",
+        "brick/money": "^0.5.0",
         "wefabric/excel": "*",
         "wefabric/address": "*",
         "wefabric/countries": "*"
