--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "require": {
         "php": "^7.1|8.*",
         "illuminate/support": "*",
-        "brick/money": "^0.5.0"
+        "brick/money": "^0.5.0",
+        "spatie/laravel-collection-macros": "^7.9"
     },
     "autoload": {
         "psr-4": {
