--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "require": {
         "php": "^7.1|8.*",
         "illuminate/support": "*",
+	"stefangabos/world_countries": "^2.5",
         "brick/money": "^0.5.0",
         "spatie/laravel-collection-macros": "^7.9"
     },
