Fix for brick money version

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "php": "8.*",
         "illuminate/support": "*",
 	"stefangabos/world_countries": "^2.5",
-        "brick/money": "^0.11.0",
+        "brick/money": "0.8",
         "spatie/laravel-collection-macros": "^7.11.0"
     },
     "autoload": {
